--- a/apps/article_browser/assets/css/article_browser_layout.css
+++ b/apps/article_browser/assets/css/article_browser_layout.css
@@ -8,7 +8,7 @@
 
 #article-browser-list-page {
     position: absolute;
-    width: 100%;
+    width: calc(100% - 2px);
     transition: all cubic-bezier(0.8, 0, 0.2, 1) 0.5s;
     cursor: default;
     height: auto;
@@ -20,7 +20,7 @@
 
 #article-browser-article-page {
     position: absolute;
-    width: calc(100% - var(--back-btn-width));
+    width: calc(100% - var(--back-btn-width) - 2px);
     transition: all cubic-bezier(0.8, 0, 0.2, 1) 0.5s;
     top: 0px;
     left: calc(100%);
